# neural-txt

./: .gitignore  README.md  app.py  pyproject.toml
examples/: basic_usage.py  json_mode.py  mlx_usage.py
neuraltxt/: __init__.py  backends.py  model.py  parsing.py  tasks.py  types.py
