[project]
name = "neuraltxt"
version = "0.1.0"
description = "Structured NLP tasks powered by a fine-tuned small language model"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Avishek Biswas" },
]
keywords = ["nlp", "llm", "text-processing", "knowledge-graph", "question-answering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers",
    "sentencepiece",
    "outlines",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/avbiswas/neural-txt"
Repository = "https://github.com/avbiswas/neural-txt"

[project.optional-dependencies]
hf = [
    "torch",
    "accelerate",
]
mlx = [
    "mlx-lm",
]
app = [
    "gradio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["neuraltxt/", "README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["neuraltxt"]
